fix touchevent on mobile

--- a/sidebar.less
+++ b/sidebar.less
@@ -140,12 +140,14 @@
     }
 
     .page-content-wrapper{
-        padding: 20px;
+        padding: 15px;
         position: relative;
-        padding-left: 250px;
+        padding-left: 265px;
+        .container{max-width: 100%;}
         @media (max-width: 768px){
+            .container{max-width: 100%;}
             margin-top: 50px;
-            padding-left: 20px;
+            padding-left: 15px;
         }
     }
 
@@ -177,10 +179,10 @@
         }
     }
     .page-content-wrapper{
-        padding-left: 20px;
-        padding-right: 250px;
+        padding-left: 15px;
+        padding-right: 265px;
         @media (max-width: 768px){
-            padding-right: 20px;
+            padding-right: 15px;
         }
     }
 }
